# MP4-Lossless-Rotator

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  mp4-rotator_example.ini  rustfmt.toml
src/: config.rs  main.rs  rotate.rs
